# messenager

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  skill.md
.github/workflows/: ci.yml
apps/backend/: Cargo.toml
apps/backend/src/: auth.rs  config.rs  error.rs  handlers.rs  main.rs  state.rs
apps/mobile/: App.tsx  app.json  index.js  package.json  tsconfig.json
apps/mobile/src/: database.ts  supabase.ts
apps/mobile/src/lib/: api.ts  avatar.ts  e2ee.ts  env.ts  notifications.ts  phone.ts  storage.ts  supabase.ts
apps/mobile/src/store/: SignalStore.ts  session.ts
apps/mobile/src/utils/: CryptoHelpers.ts
supabase/: config.toml
supabase/migrations/: 202604140001_initial_schema.sql  202604140002_enable_messages_realtime.sql  202604140003_phone_auth_direct_chats.sql  202604140004_profiles_receipts_presence_push.sql  202604140005_unique_profile_username.sql  202604140006_avatar_storage_restrictions.sql  202604140007_usernames_search_cleanup.sql  202604140008_chat_history_clear.sql  202604140009_message_actions_chat_preferences_private_avatars.sql  202604170001_e2ee_device_keys_pending_messages.sql  202604170002_e2ee_signal_device_ids.sql  202604170003_e2ee_pending_messages_chat_id.sql  202604170004_e2ee_chat_events.sql
